@@ -1,3 +1,8 @@
+2024-07-29  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Implement "Requires-First" dependencies, to improve the semantics
+	of boot dependencies.
+
 2024-07-28  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* vera.C: The "status" command will imply --stopped if any units
